<resources>
    <string name="app_name">NativeCalc_v1</string>
    <string name="answer">ANSWER</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_4">4</string>
    <string name="_equal">=</string>
    <string name="_3">3</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="div">DIV()</string>
    <string name="number1">Number1</string>
    <string name="number2">Number2</string>
    <string name="call_jni_funcion">CALL JNI FUNCTION</string>
    <string name="add">ADD()</string>
    <string name="sub">SUB()</string>
    <string name="mul">MUL()</string>
    <string name="dash">--jniMSG()--</string>

</resources>